<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_screen"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/background"
    tools:context="bobbio.martin.a07_tateti.MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">
        
        <TextView
            style="@style/title"
            android:text="@string/app_name"/>
        
        <Button
            style="@style/button"
            android:text="@string/one_player"
            android:id="@+id/one_player"/>
        
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                style="@style/radio_button"
                android:id="@+id/easy"
                android:text="@string/easy"
                android:checked="true"/>
            <RadioButton
                style="@style/radio_button"
                android:id="@+id/normal"
                android:text="@string/normal"/>
            <RadioButton
                style="@style/radio_button"
                android:id="@+id/imposible"
                android:text="@string/imposible"/>

        </RadioGroup>

        <Button
            style="@style/button"
            android:text="@string/two_player"
            android:id="@+id/two_player"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.4"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            style="@style/casilla"
            android:id="@+id/a1"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/a2"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/a3"
            android:src="@drawable/aspa"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/b1"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/b2"
            android:src="@drawable/circulo"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/b3"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/c1"
            android:src="@drawable/circulo"/>
        <ImageView
            style="@style/casilla"
            android:src="@drawable/aspa"
            android:id="@+id/c2"/>
        <ImageView
            style="@style/casilla"
            android:id="@+id/c3"/>

    </GridLayout>


</LinearLayout>
